# TriConsistencyNet

./: .gitignore  EXPERIMENT_LOG.md  README.md  pyproject.toml  requirements.txt
configs/: dataset.yaml  model.yaml  project.yaml  training.yaml
docs/: DGX_SPECIFICATIONS.md  PROJECT_STRUCTURE.md
reports/: dataset_statistics.json
scripts/: evaluate_baseline.py  extract_faces.py  extract_frames.py  generate_face_metadata.py  test_attention.py  test_baseline.py  test_config.py  test_dataloader.py  test_face_extractor.py  test_face_metadata_generator.py  test_ffpp_dataset.py  test_frame_extractor.py  test_frequency_encoder.py  test_fusion.py  test_logger.py  test_splitter.py  test_statistics.py  test_triconsistencynet.py  test_validator.py  train_baseline.py  validate_dataset.py
src/datasets/: dataloader.py  face_extractor.py  face_metadata_generator.py  ffpp_dataset.py  frame_extractor.py  splitter.py  statistics.py  validator.py
src/models/: efficientnet_baseline.py
src/models/triconsistencynet/: __init__.py  attention.py  frequency.py  fusion.py
src/trainer/: __init__.py  checkpoint.py  metrics.py  trainer.py
src/triconsistencynet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: config.py  device.py  logger.py  seed.py
